# Octopus_API_Auto

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  Jenkinsfile  README.md  README_zh.md  conftest.py  main.py  pyproject.toml  pytest.ini
.gitee/workflows/: ci.yaml
.github/workflows/: ci.yaml  ci.yml
allure-report/28098995881/: index.html
allure-report/28099986631/: index.html
allure-report/28103312285/: index.html
allure-report/28228034103/: index.html
allure-report/28384148457/: index.html
allure-report/28431358188/: index.html
allure-report/28443390738/: index.html
base/: base_api_client.py
common/: api_client.py  file_utils.py  generate_orders.py  log_utils.py  wecom_error_code.py  wecom_token.py
config/: __init__.py  env_config.py  error_code.py  get_token.py  global_config.py  settings.py  token_manager.py
data/: 随机订单数据_20260624_191544.xlsx  随机订单数据_20260624_191758.xlsx  随机订单数据_20260624_191850.xlsx  随机订单数据_20260624_200619.xlsx  随机订单数据_20260624_200756.xlsx
data/json/: create_warehouse.json  response_json
data/xlsx/: create_department.xlsx
data/yaml/: demo_case.yaml  update_department.yaml
integrations/: __init__.py  auth_provider.py
integrations/octopus/: __init__.py  api_client.py  auth.py  error_code.py
integrations/wecom/: __init__.py  api_client.py  wecom_error_code.py  wecom_token.py
services/: __init__.py  department_service.py
services/octopus/: __init__.py  channel_service.py  order_service.py  product_service.py  warehouse_service.py
services/wecom/: __init__.py  department_service.py
tests/test_Wecom/: conftest.py  debug_token.py  test_create_department.py  test_delete_department.py  test_depart_manager.py  test_update_department.py  xlsx_modify_yaml.py
tests/test_api/: test_data_demo.py  test_find_pet_owner.py
tests/test_lernen/: test_amap.py  test_scripts.py
tests/test_octopus/: conftest.py  test_channel_flow.py  test_health.py  test_order_flow.py  test_product_flow.py  (+1 more)
(+123 files in other folders)
