[project]
name = "interface-automation"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "allure-pytest>=2.16.0",
    "faker>=40.15.0",
    "jsonpath>=0.82.2",
    "jsonschema>=4.26.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pytest-ordering>=0.6",
    "pytest-rerunfailures>=16.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.1",
]
