[project]
name = "interface-automation"
version = "0.1.0"
description = "Enterprise WeChat Interface Automation Project"
authors = [{ name = "guowendong" }]
requires-python = ">=3.14"
dependencies = [
    "allure-pytest>=2.16.0",
    "faker>=40.15.0",
    "jsonpath>=0.82.2",
    "jsonschema>=4.26.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pytest-ordering>=0.6",
    "pytest-rerunfailures>=16.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py314"]
include = '\.pyi?$'
exclude = '/(\.git | \.venv | env | build | dist | \.pytest_cache | \.tox)/'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "W504", "F401"]
exclude = ".git,.venv,env,build,dist,.pytest_cache,.tox"

[tool.pytest.ini_options]
addopts = "-ra -q --tb=short --strict-markers --alluredir=reports/allure-results"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "smoke: smoke test",
    "regression: regression test",
    "wecom: wecom interface test"
]



[tool.hatch.build.targets.wheel]
packages = ["common", "config", "services"]
